<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crud">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/menuju_sqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlites" />
    <Button
        android:id="@+id/menuju_webserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webservapi" />
    <Button
        android:id="@+id/menuju_downup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updown" />


</LinearLayout>